--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://gitlab.com/hungbuiqb16/rails-app.git"
+    "url": "https://github.com/NguyenDaoGiaBao/rails-app.git"
   },
   "private": true
 }
