--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
     "type": "git",
     "url": "https://github.com/NguyenDaoGiaBao/rails-app.git"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@rails/webpacker": "5.4.4",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
+  }
 }
